# tropical

./: .gitignore  README.md  build_biomart_dataset.py  pyproject.toml  ribonn_modal.py  serve_modal.py  train_modal.py  upload_data_modal.py  upload_ribonn_weights.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ApiStatus.tsx  GenerationParams.tsx  ProteinInput.tsx  RiboNNPanel.tsx  SequenceOutput.tsx  TEPanel.tsx
frontend/src/lib/: api.ts  constants.ts
research/: mrnabench.md
tropical/: cli.py  config.py  data.py  generate.py  model.py  tokenizer.py  train.py
